--- a/NexusClient/packages.config
+++ b/NexusClient/packages.config
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net461" />
   <package id="Pathoschild.FluentNexus" version="1.0.5" targetFramework="net461" />
-  <package id="Pathoschild.Http.FluentClient" version="4.3.0" targetFramework="net461" />
-  <package id="Squid-Box.SevenZipSharp" version="1.6.1.23" targetFramework="net461" />
+  <package id="Pathoschild.Http.FluentClient" version="4.4.1" targetFramework="net461" />
+  <package id="Squid-Box.SevenZipSharp" version="1.6.2.24" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
 </packages>
